RESOLVED FIXED216108
TextDecoder should ignore byte-order-mark like other browsers and spec
https://bugs.webkit.org/show_bug.cgi?id=216108
Summary TextDecoder should ignore byte-order-mark like other browsers and spec
Alex Christensen
Reported 2020-09-02 16:42:26 PDT
TextDecoder should ignore byte-order-mark like other browsers and spec
Attachments
Patch (3.98 KB, patch)
2020-09-02 16:43 PDT, Alex Christensen
no flags
Patch (9.82 KB, patch)
2020-09-02 21:19 PDT, Alex Christensen
darin: review+
Alex Christensen
Comment 1 2020-09-02 16:43:01 PDT
Alexey Proskuryakov
Comment 2 2020-09-02 18:10:32 PDT
Is this a dupe of bug 169858 or a dupe of bug 203832? Both, I guess.
Alex Christensen
Comment 3 2020-09-02 20:06:55 PDT
*** Bug 169858 has been marked as a duplicate of this bug. ***
Alex Christensen
Comment 4 2020-09-02 20:07:20 PDT
*** Bug 203832 has been marked as a duplicate of this bug. ***
Alex Christensen
Comment 5 2020-09-02 21:19:33 PDT
Alex Christensen
Comment 6 2020-09-03 09:37:24 PDT
Comment on attachment 407864 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=407864&action=review > Source/WebCore/dom/TextDecoder.cpp:72 > + if (stream && length < bytesNeededForFullBOMIgnoreCheck()) > + return WaitForMoreBOMBytes::Yes; I also need to check if the bytes start with what may become a byte order mark here. If they're other bytes, I need to return WaitForMoreBOMBytes::No
Darin Adler
Comment 7 2020-09-03 09:57:58 PDT
Comment on attachment 407864 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=407864&action=review >> Source/WebCore/dom/TextDecoder.cpp:72 >> + return WaitForMoreBOMBytes::Yes; > > I also need to check if the bytes start with what may become a byte order mark here. If they're other bytes, I need to return WaitForMoreBOMBytes::No I guess the function would have a name like isBOMPrefix.
Alex Christensen
Comment 8 2020-09-03 09:58:03 PDT
Radar WebKit Bug Importer
Comment 9 2020-09-03 09:59:27 PDT
Note You need to log in before you can comment on or make changes to this bug.