TextDecoder should ignore byte-order-mark like other browsers and spec https://bugs.webkit.org/show_bug.cgi?id=216108

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

* web-platform-tests/encoding/streams/decode-ignore-bom.any-expected.txt:
* web-platform-tests/encoding/textdecoder-ignorebom.any-expected.txt:

Source/WebCore:

Covered by newly passing web platform tests.

* dom/TextDecoder.cpp:
(WebCore::TextDecoder::ignoreBOMIfNecessary):
(WebCore::TextDecoder::decode):
(WebCore::TextDecoder::prependBOMIfNecessary): Deleted.
* dom/TextDecoder.h:



Canonical link: https://commits.webkit.org/228930@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266528 268f45cc-cd09-0410-ab3c-d52691b4dbfc