Source/WebCore/dom/TextDecoder.cpp
@@ -48,11 +48,50 @@ TextDecoder::TextDecoder(const char* label, Options options)
 {
 }
 
-void TextDecoder::ignoreBOMIfNecessary(const uint8_t*& data, size_t& length)
+constexpr uint8_t utf8BOMBytes[3] { 0xEF, 0xBB, 0xBF };
+constexpr uint8_t utf16BEBOMBytes[2] { 0xFE, 0xFF };
+constexpr uint8_t utf16LEBOMBytes[2] { 0xFF, 0xFE };
+
+size_t TextDecoder::bytesNeededForFullBOMIgnoreCheck() const
 {
-    const uint8_t utf8BOMBytes[3] = {0xEF, 0xBB, 0xBF};
-    const uint8_t utf16BEBOMBytes[2] = {0xFE, 0xFF};
-    const uint8_t utf16LEBOMBytes[2] = {0xFF, 0xFE};
+    if (m_textEncoding == UTF8Encoding())
+        return sizeof(utf8BOMBytes);
+    if (m_textEncoding == UTF16BigEndianEncoding())
+        return sizeof(utf16BEBOMBytes);
+    if (m_textEncoding == UTF16LittleEndianEncoding())
+        return sizeof(utf16LEBOMBytes);
+    return 0;
+}
+
+bool TextDecoder::isBeginningOfIncompleteBOM(const uint8_t* bytes, size_t length) const
+{
+    if (!length)
+        return true;
+
+    if (m_textEncoding == UTF8Encoding()) {
+        if (length == 1)
+            return bytes[0] == utf8BOMBytes[0];
+        return length == 2 && bytes[0] == utf8BOMBytes[0] && bytes[1] == utf8BOMBytes[1];
+    }
+    if (m_textEncoding == UTF16BigEndianEncoding())
+        return length == 1 && bytes[0] == utf16BEBOMBytes[0];
+    if (m_textEncoding == UTF16LittleEndianEncoding())
+        return length == 1 && bytes[0] == utf16LEBOMBytes[0];
+
+    return false;
+}
+
+auto TextDecoder::ignoreBOMIfNecessary(const uint8_t*& data, size_t& length, bool stream) -> WaitForMoreBOMBytes
+{
+    if (m_bomIgnoredIfNecessary || m_options.ignoreBOM)
+        return WaitForMoreBOMBytes::No;
+
+    if (stream && length < bytesNeededForFullBOMIgnoreCheck()) {
+        if (isBeginningOfIncompleteBOM(data, length))
+            return WaitForMoreBOMBytes::Yes;
+        m_bomIgnoredIfNecessary = true;
+        return WaitForMoreBOMBytes::No;
+    }
 
     if (m_textEncoding == UTF8Encoding()
         && length >= sizeof(utf8BOMBytes)
@@ -74,16 +113,8 @@ void TextDecoder::ignoreBOMIfNecessary(const uint8_t*& data, size_t& length)
         data += sizeof(utf16LEBOMBytes);
         length -= sizeof(utf16LEBOMBytes);
     }
-}
-
-String TextDecoder::prependBOMIfNecessary(const String& decoded)
-{
-    if (m_hasDecoded || !m_options.ignoreBOM)
-        return decoded;
-    const UChar utf16BEBOM[2] = {0xFEFF, '\0'};
-
-    // FIXME: Make TextCodec::decode take a flag for prepending BOM so we don't need to do this extra allocation and copy.
-    return makeString(utf16BEBOM, decoded);
+    m_bomIgnoredIfNecessary = true;
+    return WaitForMoreBOMBytes::No;
 }
 
 static size_t codeUnitByteSize(const TextEncoding& encoding)
@@ -102,12 +133,22 @@ ExceptionOr<String> TextDecoder::decode(Optional<BufferSource::VariantType> inpu
         length = inputBuffer->length();
     }
 
-    ignoreBOMIfNecessary(data, length);
+    if (!options.stream)
+        m_bomIgnoredIfNecessary = false;
 
+    bool alreadyBuffered = false;
     if (m_buffer.size()) {
         m_buffer.append(data, length);
         data = m_buffer.data();
         length = m_buffer.size();
+        alreadyBuffered = true;
+    }
+
+    if (ignoreBOMIfNecessary(data, length, options.stream) == WaitForMoreBOMBytes::Yes) {
+        ASSERT(options.stream);
+        if (!alreadyBuffered)
+            m_buffer.append(data, length);
+        return String();
     }
 
     const bool stopOnError = true;
@@ -117,7 +158,7 @@ ExceptionOr<String> TextDecoder::decode(Optional<BufferSource::VariantType> inpu
     const char* charData = reinterpret_cast<const char*>(data);
     String result;
     if (!sawError)
-        result = prependBOMIfNecessary(m_textEncoding.decode(charData, length, stopOnError, sawError));
+        result = m_textEncoding.decode(charData, length, stopOnError, sawError);
 
     if (sawError) {
         if (options.stream) {
@@ -127,12 +168,11 @@ ExceptionOr<String> TextDecoder::decode(Optional<BufferSource::VariantType> inpu
         } else {
             if (m_options.fatal)
                 return Exception { TypeError };
-            result = prependBOMIfNecessary(m_textEncoding.decode(charData, length));
+            result = m_textEncoding.decode(charData, length);
         }
     } else
         m_buffer.clear();
 
-    m_hasDecoded = true;
     return result;
 }
 
